# openapi/kas-fleet-manager.yaml
@@ -1366,6 +1366,10 @@ components:
           description: billing model to use
           type: string
           nullable: true
+        cluster_id:
+          description: enterprise OSD cluster ID to be used for kafka creation
+          type: string
+          nullable: true
     KafkaPromoteRequest:
       type: object
       properties:
